[package]
name = "universal-kill-ring"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.1"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
