[package]
name = "universal-kill-ring"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
description = "Emacs style kill-ring implementation for shell that does not depend on external commands"
readme = "README.md"
repository = "https://github.com/Kyure-A/zsh-universal-kill-ring"
keywords = ["kill-ring", "zsh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.1"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
home-dir = "0.1.0"
nix = "0.20.2"
